fix top navbar responsiveness styling on collapse.

--- a/src/stylesheets/TopNavbar.css
+++ b/src/stylesheets/TopNavbar.css
@@ -1,8 +1,6 @@
 #top-navbar {
-    position: fixed;
-
-    height: 90px;
-    width: 100%;
+    /* height: 90px; */
+    /* width: 100%; */
 
     padding-left: 24px;
     padding-right: 24px;
@@ -24,4 +22,43 @@
 
 #top-navbar-search-btn {
     border: none;
+}
+
+/* Extra small devices (portrait phones, less than 576px) */
+@media (max-width: 575.98px) {
+    #top-navbar-search-form-container {
+        padding-top: 30px;
+        padding-bottom: 15px;
+    }
+    #top-navbar-search-form {
+        display: flex;
+        justify-content: space-between;
+    }
+    #top-navbar-search-input {
+        flex-basis: 78%;
+    }
+    #top-navbar-search-btn {
+        flex-basis: 20%;
+    }
+}
+
+/* Small devices (landscape phones, 576px and up) */
+@media (min-width: 576px) {
+    #top-navbar-content {
+        border: none;
+    }
+}
+  
+/* Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) {
+
+}
+  
+/* Large devices (desktops, 992px and up) */
+@media (min-width: 992px) {
+
+}
+  
+/* Extra large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) {
 }
